infra/k8s/log-aggregator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-aggregator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-aggregator
  template:
    metadata:
      labels:
        app: log-aggregator
    spec:
      containers:
        - name: log-aggregator
          image: travism26/log-aggregator:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'

---
apiVersion: v1
kind: Service
metadata:
  name: log-aggregator-srv
spec:
  selector:
    app: log-aggregator
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
